add ghost removing feat and cleanup code